<resources>
    <string name="app_name">Serviço de Urgências</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="hospital_list_item_name_placeholder">Hospital Santa Maria</string>
    <string name="hospital_list_item_address_placeholder">Av. Prof. Egas Moniz 1649-035 Lisboa</string>
    <string name="hospital_list_item_distance_placeholder">33km</string>
    <string name="hospital_list_item_details_text">Detalhes ></string>

    <string name="hospital_detail_name_placeholder">Hospital Santa Maria</string>
    <string name="hospital_detail_distance_placeholder">5.5 Km</string>
    <string name="tetxView_hospital_detail_address_label_text">Morada</string>
    <string name="textView_hospital_detail_address_placeholder">Av. Prof. Egas Moniz 1649-035 Lisboa</string>
    <string name="tetxView_hospital_detail_phone_label_text">Telefone</string>
    <string name="textView_hospital_detail_phone_placeholder">213585684</string>
    <string name="tetxView_hospital_detail_email_label_text">E-Mail</string>
    <string name="textView_hospital_detail_email_placeholder">santaMaria@min-saude.pt</string>
    <string name="tetxView_hospital_detail_webSite_label_text">Web Site</string>
    <string name="textView_hospital_detail_webSite_placeholder">www.santamaria.gov.pt</string>

    <string name="text_view_hospital_queue_obsteatria_label">Obstétrica</string>
    <string name="text_view_hospital_queue_geral_label">Geral</string>
    <string name="text_view_hospital_queue_pediatria_label">Pediátrica</string>
    <string name="text_view_hospital_queue_type_label">Tipo</string>
    <string name="hospital_queue_time_label">Tempo</string>
    <string name="hospital_queue_nao_grave_placeholder">42min</string>

    <string name="radio_nao_grave">Não Grave</string>
    <string name="radio_grave">Grave</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCeUxyK5YgXl5_8cFnmfOZm-4iyj5XZcA0</string>
    <string name="text_view_hospital_queue_obsteatria_placeholder">24min</string>

    <string name="visit_list_item_hospital_name_placeholder">Hospital Santa Maria</string>
    <string name="visit_list_item_entry_time_placeholder">Entrada: 12:34</string>
    <string name="visit_list_item_exit_time_placeholder">Saída: 13:08</string>
    <string name="visit_list_item_visit_date_placeholder">Data: 24/11/2018</string>
    <string name="visit_list_item_elapsed_time_placeholder">Duração: 14 min</string>

    <string-array name="tipos_urgencia">
        <item>Geral</item>
        <item>Pediatria</item>
        <item>Obstetrícia</item>
    </string-array>

</resources>