<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/visit_list_item_hospital_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="18sp"
                android:text="@string/visit_list_item_hospital_name_placeholder"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/visit_list_item_entry_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItemSecondary"
                android:text="@string/visit_list_item_entry_time_placeholder"
                android:paddingLeft="18dp" />

            <TextView
                android:id="@+id/visit_list_item_exit_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItemSecondary"
                android:text="@string/visit_list_item_exit_time_placeholder"
                android:paddingLeft="18dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/visit_list_item_visit_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="0"
                android:paddingTop="18dp"
                android:paddingRight="10dp"
                android:gravity="end"
                android:text="@string/visit_list_item_visit_date_placeholder"
                android:textAppearance="?attr/textAppearanceListItemSecondary"/>

            <TextView
                android:id="@+id/visit_list_item_elapsed_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="bottom"
                android:layout_gravity="end"
                android:layout_marginBottom="2dp"
                android:paddingRight="10dp"
                android:text="@string/visit_list_item_elapsed_time_placeholder"
                android:textSize="10dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>