<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hospital_list_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="18sp"
                android:text="@string/hospital_list_item_name_placeholder"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/hospital_list_item_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItemSecondary"
                android:text="@string/hospital_list_item_address_placeholder"
                android:paddingLeft="18dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hospital_list_item_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="0"
                android:paddingTop="18dp"
                android:paddingRight="10dp"
                android:gravity="end"
                android:text="@string/hospital_list_item_distance_placeholder"
                android:textAppearance="?attr/textAppearanceListItemSecondary"/>

            <TextView
                android:id="@+id/hospital_list_item_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="bottom"
                android:layout_gravity="end"
                android:layout_marginBottom="2dp"
                android:paddingRight="10dp"
                android:text="@string/hospital_list_item_details_text"
                android:textSize="10dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>