<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HospitalDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <android:android.support.constraint.ConstraintLayout
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/cardView_hospital_detail_cover"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    card_view:cardCornerRadius="4dp"
                    android:layout_margin="16dp">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imageView_hospital_detail_photo"
                            android:layout_width="wrap_content"
                            android:layout_height="200dp"
                            android:padding="2dp"
                            android:src="@drawable/hospital_detail_cover_image"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:contentDescription="Image Placeholder" />

                        <TextView
                            android:id="@+id/textView_hospital_detail_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="16dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingBottom="8dp"
                            android:text="@string/hospital_detail_name_placeholder"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"
                            android:textAppearance="?android:textAppearanceLarge"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/imageView_hospital_detail_photo"/>

                        <TextView
                            android:id="@+id/textView_hospital_detail_distance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="16dp"
                            android:text="@string/hospital_detail_distance_placeholder"
                            android:textAppearance="?android:textAppearanceMedium"
                            app:layout_constraintTop_toBottomOf="@id/textView_hospital_detail_name"
                            app:layout_constraintLeft_toLeftOf="parent"/>



                    </android.support.constraint.ConstraintLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cardView_hospital_detail_cover"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    card_view:cardCornerRadius="4dp"
                    android:layout_margin="16dp">


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cardView_hospital_detail_info"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/cardView_hospital_detail_cover"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:cardCornerRadius="4dp"
                    android:layout_margin="16dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp" >

                        <TextView
                            android:id="@+id/textView_hospital_detail_address_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tetxView_hospital_detail_address_label_text"
                            android:textColor="@color/colorPrimaryDark"
                            android:onClick="openAddressMapExternalPage" />
                        <TextView
                            android:id="@+id/textView_hospital_detail_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlack"
                            android:text="@string/textView_hospital_detail_address_placeholder"
                            android:onClick="openAddressMapExternalPage" />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="?android:attr/listDivider"
                            android:layout_marginVertical="8dp" />


                        <TextView
                            android:id="@+id/textView_hospital_detail_phone_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tetxView_hospital_detail_phone_label_text"
                            android:textColor="@color/colorPrimaryDark"
                            android:onClick="openPhoneExternalPage" />
                        <TextView
                            android:id="@+id/textView_hospital_detail_phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlack"
                            android:text="@string/textView_hospital_detail_phone_placeholder"
                            android:onClick="openPhoneExternalPage" />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="?android:attr/listDivider"
                            android:layout_marginVertical="8dp" />


                        <TextView
                            android:id="@+id/textView_hospital_detail_email_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tetxView_hospital_detail_email_label_text"
                            android:textColor="@color/colorPrimaryDark"
                            android:onClick="openEmailExternalPage" />
                        <TextView
                            android:id="@+id/textView_hospital_detail_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlack"
                            android:text="@string/textView_hospital_detail_email_placeholder"
                            android:onClick="openEmailExternalPage" />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="?android:attr/listDivider"
                            android:layout_marginVertical="8dp" />


                        <TextView
                            android:id="@+id/textView_hospital_detail_webSite_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tetxView_hospital_detail_webSite_label_text"
                            android:textColor="@color/colorPrimaryDark"
                            android:onClick="openWebSiteExternalPage" />
                        <TextView
                            android:id="@+id/textView_hospital_detail_webSite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlack"
                            android:text="@string/textView_hospital_detail_webSite_placeholder"
                            android:onClick="openWebSiteExternalPage" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </android:android.support.constraint.ConstraintLayout>

    </ScrollView>

</FrameLayout>